# ros-task

docker/: sim.Dockerfile
docker_context/: app.sh
install/: local_setup.sh  setup.sh
install/limo_control/share/limo_control/: local_setup.sh  package.sh  package.xml
install/limo_control/share/limo_control/launch/: launch_for_controller.py
install/limo_simulation/share/limo_simulation/: package.bash  package.ps1  package.sh  package.zsh
install/limo_simulation/share/limo_simulation/cmake/: ament_cmake_export_dependencies-extras.cmake  limo_simulationConfig.cmake
install/limo_simulation/share/limo_simulation/launch/: limo.launch.py
log/: latest_build
scripts/deploy/: app.sh  start.sh
workspace/install/: local_setup.sh  setup.sh
workspace/install/limo_control/share/limo_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/limo_control/share/limo_control/launch/: launch_for_controller.py
workspace/install/limo_simulation/share/ament_index/resource_index/package_run_dependencies/: limo_simulation
workspace/install/limo_simulation/share/limo_simulation/: package.dsv  package.sh
workspace/limo_control/: CMakeLists.txt  limo_controller.cpp
workspace/limo_simulation/launch/: limo.launch.py
workspace/log/: latest_build
